--- a/css/global.css
+++ b/css/global.css
@@ -1,24 +1,45 @@
 /* SCSS */
 /* line 5, ../scss/global.scss */
+div, nav, header, footer, aside, ul, input {
+  -mox-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+/* line 11, ../scss/global.scss */
+li {
+  list-style: none; }
+
+/* line 15, ../scss/global.scss */
 body {
   font-family: "Segoe UI", sans-serif;
   color: #555555; }
 
-/* line 9, ../scss/global.scss */
+/* line 20, ../scss/global.scss */
+a {
+  color: #e6258b; }
+
+/* line 24, ../scss/global.scss */
 .page-wrap {
-  width: 1024px;
-  margin: 0 auto;
-  text-align: center; }
+  width: 1100px;
+  height: 600px;
+  border: 1px solid #e3e3e3;
+  margin: 0 auto; }
 
-/* line 14, ../scss/global.scss */
-.page-wrap img {
-  width: 400px;
-  height: auto; }
-
-/* line 18, ../scss/global.scss */
-.page-wrap a {
-  color: #0072c6; }
-
-/* line 21, ../scss/global.scss */
-.page-wrap h1 {
-  font-size: 28px; }
+/* line 31, ../scss/global.scss */
+header {
+  position: relative;
+  height: 75px;
+  width: 100%;
+  background: #333333; }
+  /* line 36, ../scss/global.scss */
+  header .logo {
+    width: 290px;
+    height: 48px;
+    background-image: url(../images/msopentech_logo.png);
+    background-repeat: no-repeat; }
+  /* line 42, ../scss/global.scss */
+  header h1 {
+    color: white;
+    font-weight: 200;
+    text-align: center;
+    line-height: 75px; }
