--- a/css/global.css
+++ b/css/global.css
@@ -76,36 +76,62 @@ nav {
     /* line 76, ../scss/global.scss */
     nav ul li {
       float: left;
-      margin-right: 1%;
-      width: 15%;
+      width: 19%;
       text-align: center;
       border-right: 2px solid #e3e3e3; }
-      /* line 82, ../scss/global.scss */
+      /* line 81, ../scss/global.scss */
       nav ul li:last-child {
         border: none; }
-      /* line 85, ../scss/global.scss */
+      /* line 84, ../scss/global.scss */
       nav ul li a {
         line-height: 40px; }
 
-/* line 93, ../scss/global.scss */
+/* line 92, ../scss/global.scss */
 .repository-thumbs {
   width: 90%;
   margin: 0 auto;
   padding-top: 28px; }
-  /* line 97, ../scss/global.scss */
+  /* line 96, ../scss/global.scss */
   .repository-thumbs .repo-single-thumb {
     position: relative;
     width: 140px;
-    height: 190px;
+    height: 180px;
     border: 2px solid #333333;
     float: left;
     margin-right: 28px;
-    margin-bottom: 28px;
-    /*background: $white;*/ }
-    /* line 106, ../scss/global.scss */
+    margin-bottom: 28px; }
+    /* line 104, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .triangle {
+      display: inline-block;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      width: 0;
+      height: 0;
+      vertical-align: top;
+      border-top: 69px solid transparent;
+      border-left: 69px solid transparent;
+      border-bottom: 69px solid transparent;
+      content: ""; }
+    /* line 117, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .top {
+      -webkit-transform: rotate(-90deg);
+      -moz-transform: rotate(-90deg);
+      transform: rotate(-90deg); }
+    /* line 122, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .bottom {
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      transform: rotate(90deg); }
+    /* line 127, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .left {
+      -webkit-transform: rotate(180deg);
+      -moz-transform: rotate(180deg);
+      transform: rotate(180deg); }
+    /* line 132, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb:nth-child(6n+6) {
       margin-right: 0px; }
-    /* line 109, ../scss/global.scss */
+    /* line 135, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb h2 {
       text-align: center;
       position: absolute;
@@ -116,52 +142,52 @@ nav {
       font-weight: 200;
       height: 40px;
       padding: 5px; }
-      /* line 119, ../scss/global.scss */
+      /* line 145, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb h2 a {
         word-wrap: break-word; }
 
-/* line 126, ../scss/global.scss */
+/* line 152, ../scss/global.scss */
 .resources {
   width: 1100px;
   margin: 0 auto;
   background: #333333;
   color: white;
   padding-bottom: 15px; }
-  /* line 132, ../scss/global.scss */
+  /* line 158, ../scss/global.scss */
   .resources .resource-cat {
     width: 25%;
     float: left; }
-    /* line 135, ../scss/global.scss */
+    /* line 161, ../scss/global.scss */
     .resources .resource-cat h3 {
       color: white;
       text-align: center;
       margin: 15px 0; }
-    /* line 140, ../scss/global.scss */
+    /* line 166, ../scss/global.scss */
     .resources .resource-cat ul {
       width: 80%;
       margin: 0 auto; }
 
-/* line 147, ../scss/global.scss */
+/* line 173, ../scss/global.scss */
 footer {
   width: 1100px;
   margin: 0 auto;
   background: #333333; }
-  /* line 151, ../scss/global.scss */
+  /* line 177, ../scss/global.scss */
   footer .policies {
     width: 100%;
     font-size: 12px;
     padding-bottom: 20px;
     padding-top: 10px; }
-    /* line 156, ../scss/global.scss */
+    /* line 182, ../scss/global.scss */
     footer .policies .policy-links {
       width: 50%;
       float: left; }
-      /* line 159, ../scss/global.scss */
+      /* line 185, ../scss/global.scss */
       footer .policies .policy-links ul li {
         float: left;
         width: 30%;
         text-align: center; }
-    /* line 166, ../scss/global.scss */
+    /* line 192, ../scss/global.scss */
     footer .policies .copyright {
       width: 49%;
       float: right; }
