removing the triangles and empty boxes for now.  will be putting in some icons in the near future

--- a/css/global.css
+++ b/css/global.css
@@ -95,12 +95,12 @@ nav {
   .repository-thumbs .repo-single-thumb {
     position: relative;
     width: 140px;
-    height: 140px;
-    border: 2px solid #333333;
+    height: 40px;
+    /*border: $dborder;*/
     float: left;
     margin-right: 28px;
     margin-bottom: 28px;
-    background-color: #ffffff; }
+    /*background-color:#ffffff;*/ }
     /* line 105, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .triangle {
       display: inline-block;
