--- a/css/global.css
+++ b/css/global.css
@@ -136,7 +136,7 @@ nav {
       margin-right: 0px; }
     /* line 138, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb p {
-      margin: 0px;
+      margin: 3px 0 0 0;
       font-size: 12px; }
       /* line 141, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb p span {
