adding moz box-sizing

--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 /* SCSS */
 /* line 5, ../scss/global.scss */
 div, nav, header, footer, aside, ul, input, h2 {
-  -mox-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
