--- a/css/global.css
+++ b/css/global.css
@@ -107,41 +107,47 @@ nav {
     .repository-thumbs .repo-single-thumb .triangle {
       display: inline-block;
       position: absolute;
-      top: 0px;
-      /*right:0px;*/
+      bottom: 0px;
+      right: 0px;
       width: 0;
       height: 0;
       vertical-align: top;
-      border-top: 68px solid transparent;
-      border-left: 68px solid transparent;
-      border-bottom: 68px solid transparent;
-      content: ""; }
-    /* line 120, ../scss/global.scss */
+      content: "";
+      z-index: 88888; }
+    /* line 118, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .top {
       -webkit-transform: rotate(-90deg);
       -moz-transform: rotate(-90deg);
       transform: rotate(-90deg); }
-    /* line 125, ../scss/global.scss */
+    /* line 123, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .bottom {
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
       transform: rotate(90deg); }
-    /* line 130, ../scss/global.scss */
+    /* line 128, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .left {
       -webkit-transform: rotate(180deg);
       -moz-transform: rotate(180deg);
-      transform: rotate(180deg); }
-    /* line 135, ../scss/global.scss */
+      transform: rotate(180deg);
+      border-top: 20px solid transparent;
+      border-left: 20px solid transparent;
+      border-bottom: 20px solid transparent; }
+    /* line 136, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .right {
+      border-top: 20px solid transparent;
+      border-left: 20px solid transparent;
+      border-bottom: 20px solid transparent; }
+    /* line 141, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb:nth-child(3n+3) {
       margin-right: 0px; }
-    /* line 138, ../scss/global.scss */
+    /* line 144, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb p {
       margin: 3px 0 0 0;
-      font-size: 12px; }
-      /* line 141, ../scss/global.scss */
+      font-size: 14px; }
+      /* line 147, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb p span {
         color: #a92e8c; }
-    /* line 145, ../scss/global.scss */
+    /* line 151, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb h2 {
       text-align: center;
       position: absolute;
@@ -154,10 +160,10 @@ nav {
       padding: 5px;
       line-height: 11px;
       left: 0px; }
-      /* line 157, ../scss/global.scss */
+      /* line 163, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb h2 a {
         word-wrap: break-word; }
-    /* line 161, ../scss/global.scss */
+    /* line 167, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .repo-single-popup {
       display: none;
       position: absolute;
@@ -170,10 +176,11 @@ nav {
       z-index: 99999;
       font-size: 12px;
       box-shadow: 4px 4px 8px #333333; }
-      /* line 173, ../scss/global.scss */
+      /* line 179, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup p {
-        padding: 10px 10px 40px 10px; }
-      /* line 176, ../scss/global.scss */
+        padding: 10px 10px 40px 10px;
+        font-size: 16px; }
+      /* line 183, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup h3 {
         margin: 0px;
         background: rgba(51, 51, 51, 0.92);
@@ -185,67 +192,67 @@ nav {
         padding: 5px;
         word-wrap: break-word; }
 
-/* line 192, ../scss/global.scss */
+/* line 199, ../scss/global.scss */
 .repo-single-thumb.showing .repo-single-popup {
   display: block; }
 
-/* line 196, ../scss/global.scss */
+/* line 203, ../scss/global.scss */
 .repo-single-thumb:nth-child(3n) .repo-single-popup {
   left: -200px; }
 
-/* line 199, ../scss/global.scss */
+/* line 206, ../scss/global.scss */
 .repo-single-thumb:nth-last-child(-n + 3) .repo-single-popup {
   top: -100px; }
 
-/* line 202, ../scss/global.scss */
+/* line 209, ../scss/global.scss */
 .resources {
   width: 1100px;
   margin: 0 auto;
   background: #333333;
   color: white;
   padding-bottom: 15px; }
-  /* line 208, ../scss/global.scss */
+  /* line 215, ../scss/global.scss */
   .resources .resource-cat {
     width: 25%;
     float: left; }
-    /* line 211, ../scss/global.scss */
+    /* line 218, ../scss/global.scss */
     .resources .resource-cat h3 {
       color: white;
       text-align: center;
       margin: 15px 0; }
-    /* line 216, ../scss/global.scss */
+    /* line 223, ../scss/global.scss */
     .resources .resource-cat ul {
       width: 80%;
       margin: 0 auto;
       margin-left: 75px; }
 
-/* line 224, ../scss/global.scss */
+/* line 231, ../scss/global.scss */
 footer {
   width: 1100px;
   margin: 0 auto;
   background: #333333; }
-  /* line 228, ../scss/global.scss */
+  /* line 235, ../scss/global.scss */
   footer .policies {
     width: 100%;
     font-size: 12px;
     padding-bottom: 20px;
     padding-top: 10px; }
-    /* line 233, ../scss/global.scss */
+    /* line 240, ../scss/global.scss */
     footer .policies .policy-links {
       width: 50%;
       float: left; }
-      /* line 236, ../scss/global.scss */
+      /* line 243, ../scss/global.scss */
       footer .policies .policy-links ul li {
         float: left;
         width: 30%;
         text-align: center; }
-    /* line 243, ../scss/global.scss */
+    /* line 250, ../scss/global.scss */
     footer .policies .copyright {
       width: 49%;
       float: right; }
 
 /* TEMP STYLE FOR CHART */
-/* line 253, ../scss/global.scss */
+/* line 260, ../scss/global.scss */
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
