adding a min height to the popup boxes

--- a/css/global.css
+++ b/css/global.css
@@ -168,19 +168,18 @@ nav {
       display: none;
       position: absolute;
       width: 250px;
-      /*height:200px;*/
+      min-height: 150px;
       background: white;
       top: 10px;
       left: 200px;
-      /*border: $border;*/
       z-index: 99999;
       font-size: 12px;
       box-shadow: 4px 4px 8px #333333; }
-      /* line 179, ../scss/global.scss */
+      /* line 178, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup p {
         padding: 10px 10px 40px 10px;
         font-size: 16px; }
-      /* line 183, ../scss/global.scss */
+      /* line 182, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup h3 {
         margin: 0px;
         background: rgba(51, 51, 51, 0.92);
@@ -192,67 +191,67 @@ nav {
         padding: 5px;
         word-wrap: break-word; }
 
-/* line 199, ../scss/global.scss */
+/* line 198, ../scss/global.scss */
 .repo-single-thumb.showing .repo-single-popup {
   display: block; }
 
-/* line 203, ../scss/global.scss */
+/* line 202, ../scss/global.scss */
 .repo-single-thumb:nth-child(3n) .repo-single-popup {
   left: -200px; }
 
-/* line 206, ../scss/global.scss */
+/* line 205, ../scss/global.scss */
 .repo-single-thumb:nth-last-child(-n + 3) .repo-single-popup {
   top: -100px; }
 
-/* line 209, ../scss/global.scss */
+/* line 208, ../scss/global.scss */
 .resources {
   width: 1100px;
   margin: 0 auto;
   background: #333333;
   color: white;
   padding-bottom: 15px; }
-  /* line 215, ../scss/global.scss */
+  /* line 214, ../scss/global.scss */
   .resources .resource-cat {
     width: 25%;
     float: left; }
-    /* line 218, ../scss/global.scss */
+    /* line 217, ../scss/global.scss */
     .resources .resource-cat h3 {
       color: white;
       text-align: center;
       margin: 15px 0; }
-    /* line 223, ../scss/global.scss */
+    /* line 222, ../scss/global.scss */
     .resources .resource-cat ul {
       width: 80%;
       margin: 0 auto;
       margin-left: 75px; }
 
-/* line 231, ../scss/global.scss */
+/* line 230, ../scss/global.scss */
 footer {
   width: 1100px;
   margin: 0 auto;
   background: #333333; }
-  /* line 235, ../scss/global.scss */
+  /* line 234, ../scss/global.scss */
   footer .policies {
     width: 100%;
     font-size: 12px;
     padding-bottom: 20px;
     padding-top: 10px; }
-    /* line 240, ../scss/global.scss */
+    /* line 239, ../scss/global.scss */
     footer .policies .policy-links {
       width: 50%;
       float: left; }
-      /* line 243, ../scss/global.scss */
+      /* line 242, ../scss/global.scss */
       footer .policies .policy-links ul li {
         float: left;
         width: 30%;
         text-align: center; }
-    /* line 250, ../scss/global.scss */
+    /* line 249, ../scss/global.scss */
     footer .policies .copyright {
       width: 49%;
       float: right; }
 
 /* TEMP STYLE FOR CHART */
-/* line 260, ../scss/global.scss */
+/* line 259, ../scss/global.scss */
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
