--- a/css/global.css
+++ b/css/global.css
@@ -105,53 +105,29 @@ nav {
     padding-left: 5px; }
     /* line 107, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .triangle {
-      display: inline-block;
+      display: block;
       position: absolute;
       bottom: 0px;
       right: 0px;
-      width: 0;
-      height: 0;
-      vertical-align: top;
-      content: "";
-      z-index: 88888; }
-    /* line 118, ../scss/global.scss */
-    .repository-thumbs .repo-single-thumb .top {
-      -webkit-transform: rotate(-90deg);
-      -moz-transform: rotate(-90deg);
-      transform: rotate(-90deg); }
-    /* line 123, ../scss/global.scss */
-    .repository-thumbs .repo-single-thumb .bottom {
-      -webkit-transform: rotate(90deg);
-      -moz-transform: rotate(90deg);
-      transform: rotate(90deg); }
-    /* line 128, ../scss/global.scss */
-    .repository-thumbs .repo-single-thumb .left {
-      -webkit-transform: rotate(180deg);
-      -moz-transform: rotate(180deg);
-      transform: rotate(180deg);
-      border-top: 20px solid transparent;
-      border-left: 20px solid transparent;
-      border-bottom: 20px solid transparent; }
-    /* line 136, ../scss/global.scss */
-    .repository-thumbs .repo-single-thumb .right {
-      border-top: 20px solid transparent;
-      border-left: 20px solid transparent;
-      border-bottom: 20px solid transparent; }
-    /* line 141, ../scss/global.scss */
+      width: 70px;
+      height: 40px;
+      background: url(../images/triangleSprite.png) no-repeat;
+      /*z-index:88888;*/ }
+    /* line 117, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb:nth-child(3n+3) {
       margin-right: 0px; }
-    /* line 144, ../scss/global.scss */
+    /* line 120, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb p {
       margin: 3px 0 0 0;
       font-size: 14px; }
-      /* line 147, ../scss/global.scss */
+      /* line 123, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb p span {
         color: #a92e8c; }
-    /* line 151, ../scss/global.scss */
+    /* line 127, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb h2 {
       text-align: center;
       position: absolute;
-      background: rgba(51, 51, 51, 0.92);
+      background: #333333;
       width: 100%;
       bottom: 0px;
       color: white;
@@ -160,10 +136,10 @@ nav {
       padding: 5px;
       line-height: 11px;
       left: 0px; }
-      /* line 163, ../scss/global.scss */
+      /* line 139, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb h2 a {
         word-wrap: break-word; }
-    /* line 167, ../scss/global.scss */
+    /* line 143, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .repo-single-popup {
       display: none;
       position: absolute;
@@ -175,14 +151,14 @@ nav {
       z-index: 99999;
       font-size: 12px;
       box-shadow: 4px 4px 8px #333333; }
-      /* line 178, ../scss/global.scss */
+      /* line 154, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup p {
         padding: 10px 10px 40px 10px;
         font-size: 16px; }
-      /* line 182, ../scss/global.scss */
+      /* line 158, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup h3 {
         margin: 0px;
-        background: rgba(51, 51, 51, 0.92);
+        background: #333333;
         color: white;
         position: absolute;
         left: 0;
@@ -191,67 +167,67 @@ nav {
         padding: 5px;
         word-wrap: break-word; }
 
-/* line 198, ../scss/global.scss */
+/* line 174, ../scss/global.scss */
 .repo-single-thumb.showing .repo-single-popup {
   display: block; }
 
-/* line 202, ../scss/global.scss */
+/* line 178, ../scss/global.scss */
 .repo-single-thumb:nth-child(3n) .repo-single-popup {
   left: -200px; }
 
-/* line 205, ../scss/global.scss */
+/* line 181, ../scss/global.scss */
 .repo-single-thumb:nth-last-child(-n + 3) .repo-single-popup {
   top: -100px; }
 
-/* line 208, ../scss/global.scss */
+/* line 184, ../scss/global.scss */
 .resources {
   width: 1100px;
   margin: 0 auto;
   background: #333333;
   color: white;
   padding-bottom: 15px; }
-  /* line 214, ../scss/global.scss */
+  /* line 190, ../scss/global.scss */
   .resources .resource-cat {
     width: 25%;
     float: left; }
-    /* line 217, ../scss/global.scss */
+    /* line 193, ../scss/global.scss */
     .resources .resource-cat h3 {
       color: white;
       text-align: center;
       margin: 15px 0; }
-    /* line 222, ../scss/global.scss */
+    /* line 198, ../scss/global.scss */
     .resources .resource-cat ul {
       width: 80%;
       margin: 0 auto;
       margin-left: 75px; }
 
-/* line 230, ../scss/global.scss */
+/* line 206, ../scss/global.scss */
 footer {
   width: 1100px;
   margin: 0 auto;
   background: #333333; }
-  /* line 234, ../scss/global.scss */
+  /* line 210, ../scss/global.scss */
   footer .policies {
     width: 100%;
     font-size: 12px;
     padding-bottom: 20px;
     padding-top: 10px; }
-    /* line 239, ../scss/global.scss */
+    /* line 215, ../scss/global.scss */
     footer .policies .policy-links {
       width: 50%;
       float: left; }
-      /* line 242, ../scss/global.scss */
+      /* line 218, ../scss/global.scss */
       footer .policies .policy-links ul li {
         float: left;
         width: 30%;
         text-align: center; }
-    /* line 249, ../scss/global.scss */
+    /* line 225, ../scss/global.scss */
     footer .policies .copyright {
       width: 49%;
       float: right; }
 
 /* TEMP STYLE FOR CHART */
-/* line 259, ../scss/global.scss */
+/* line 235, ../scss/global.scss */
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
