--- a/css/global.css
+++ b/css/global.css
@@ -111,19 +111,50 @@ nav {
       right: 0px;
       width: 70px;
       height: 40px;
-      background: url(../images/triangleSprite.png) no-repeat;
-      /*z-index:88888;*/ }
-    /* line 117, ../scss/global.scss */
+      background: url(../images/triangleSprite.jpg) no-repeat;
+      background-position: 0px top;
+      z-index: 88888; }
+    /* line 118, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .one {
+      background-position: -73px top; }
+    /* line 119, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .two {
+      background-position: -146px top; }
+    /* line 120, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .three {
+      background-position: -219px top; }
+    /* line 121, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .four {
+      background-position: -292px top; }
+    /* line 122, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .five {
+      background-position: -365px top; }
+    /* line 123, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .six {
+      background-position: -438px top; }
+    /* line 124, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .seven {
+      background-position: -510px top; }
+    /* line 125, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .eight {
+      background-position: -581px top; }
+    /* line 126, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .nine {
+      background-position: -654px top; }
+    /* line 127, ../scss/global.scss */
+    .repository-thumbs .repo-single-thumb .ten {
+      background-position: -727px top; }
+    /* line 128, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb:nth-child(3n+3) {
       margin-right: 0px; }
-    /* line 120, ../scss/global.scss */
+    /* line 131, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb p {
       margin: 3px 0 0 0;
       font-size: 14px; }
-      /* line 123, ../scss/global.scss */
+      /* line 134, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb p span {
         color: #a92e8c; }
-    /* line 127, ../scss/global.scss */
+    /* line 138, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb h2 {
       text-align: center;
       position: absolute;
@@ -136,10 +167,13 @@ nav {
       padding: 5px;
       line-height: 11px;
       left: 0px; }
-      /* line 139, ../scss/global.scss */
+      /* line 150, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb h2 a {
-        word-wrap: break-word; }
-    /* line 143, ../scss/global.scss */
+        word-wrap: break-word;
+        position: relative;
+        z-index: 89000;
+        text-shadow: 2px 2px 2px #333333; }
+    /* line 157, ../scss/global.scss */
     .repository-thumbs .repo-single-thumb .repo-single-popup {
       display: none;
       position: absolute;
@@ -151,11 +185,11 @@ nav {
       z-index: 99999;
       font-size: 12px;
       box-shadow: 4px 4px 8px #333333; }
-      /* line 154, ../scss/global.scss */
+      /* line 168, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup p {
         padding: 10px 10px 40px 10px;
         font-size: 16px; }
-      /* line 158, ../scss/global.scss */
+      /* line 172, ../scss/global.scss */
       .repository-thumbs .repo-single-thumb .repo-single-popup h3 {
         margin: 0px;
         background: #333333;
@@ -167,67 +201,67 @@ nav {
         padding: 5px;
         word-wrap: break-word; }
 
-/* line 174, ../scss/global.scss */
+/* line 188, ../scss/global.scss */
 .repo-single-thumb.showing .repo-single-popup {
   display: block; }
 
-/* line 178, ../scss/global.scss */
+/* line 192, ../scss/global.scss */
 .repo-single-thumb:nth-child(3n) .repo-single-popup {
   left: -200px; }
 
-/* line 181, ../scss/global.scss */
+/* line 195, ../scss/global.scss */
 .repo-single-thumb:nth-last-child(-n + 3) .repo-single-popup {
   top: -100px; }
 
-/* line 184, ../scss/global.scss */
+/* line 198, ../scss/global.scss */
 .resources {
   width: 1100px;
   margin: 0 auto;
   background: #333333;
   color: white;
   padding-bottom: 15px; }
-  /* line 190, ../scss/global.scss */
+  /* line 204, ../scss/global.scss */
   .resources .resource-cat {
     width: 25%;
     float: left; }
-    /* line 193, ../scss/global.scss */
+    /* line 207, ../scss/global.scss */
     .resources .resource-cat h3 {
       color: white;
       text-align: center;
       margin: 15px 0; }
-    /* line 198, ../scss/global.scss */
+    /* line 212, ../scss/global.scss */
     .resources .resource-cat ul {
       width: 80%;
       margin: 0 auto;
       margin-left: 75px; }
 
-/* line 206, ../scss/global.scss */
+/* line 220, ../scss/global.scss */
 footer {
   width: 1100px;
   margin: 0 auto;
   background: #333333; }
-  /* line 210, ../scss/global.scss */
+  /* line 224, ../scss/global.scss */
   footer .policies {
     width: 100%;
     font-size: 12px;
     padding-bottom: 20px;
     padding-top: 10px; }
-    /* line 215, ../scss/global.scss */
+    /* line 229, ../scss/global.scss */
     footer .policies .policy-links {
       width: 50%;
       float: left; }
-      /* line 218, ../scss/global.scss */
+      /* line 232, ../scss/global.scss */
       footer .policies .policy-links ul li {
         float: left;
         width: 30%;
         text-align: center; }
-    /* line 225, ../scss/global.scss */
+    /* line 239, ../scss/global.scss */
     footer .policies .copyright {
       width: 49%;
       float: right; }
 
 /* TEMP STYLE FOR CHART */
-/* line 235, ../scss/global.scss */
+/* line 249, ../scss/global.scss */
 .chart div {
   font: 10px sans-serif;
   background-color: steelblue;
